<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/_10sdp"
    android:layout_marginEnd="@dimen/_10sdp"
    app:cardCornerRadius="8dp"
    android:elevation="10dp"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    >

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivNewsEventsThumbnail"
        android:layout_width="@dimen/_300sdp"
        android:layout_height="@dimen/_200sdp"
        android:scaleType="centerCrop"
        android:src="@drawable/news_events_thumbnail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvNewsEventsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/news_events_title"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvNewsEventsDescription"
        android:layout_width="@dimen/o"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:text="@string/news_events_description"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:maxLines="2"
        android:ellipsize="end"
        app:layout_constraintEnd_toEndOf="@+id/ivNewsEventsThumbnail"
        app:layout_constraintStart_toStartOf="@+id/tvNewsEventsTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvNewsEventsTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvNewsEventsDate"
        android:layout_width="@dimen/o"
        android:layout_height="wrap_content"
        android:text="@string/news_events_date"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/tvNewsEventsDescription"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvNewsEventsDescription"
        app:layout_constraintTop_toBottomOf="@+id/tvNewsEventsDescription" />


</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>