<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/_4sdp"
    android:layout_marginRight="@dimen/_4sdp"
    android:background="@color/white"
    app:cardCornerRadius="5dp"
    card_view:cardElevation="2dp"
    card_view:contentPadding="1dp">



        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bgBlog"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_150sdp"
            android:background="@color/darkGreenTwo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.483"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivBlogImage"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/blogpic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.47000003" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvBlogTitle"
                android:layout_width="@dimen/o"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/blog_title"
                android:textColor="@color/white"
                android:maxLines="1"
                android:ellipsize="end"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.1"
                app:layout_constraintHorizontal_bias="0.7"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintWidth_percent=".5" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvBlogDescriptionOne"

                android:layout_width="@dimen/o"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/blog_description1"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18sp"
                android:maxLines="2"
                android:ellipsize="end"
                android:layout_marginEnd="@dimen/_16sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.3"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tvBlogTitle"
                app:layout_constraintTop_toBottomOf="@+id/tvBlogTitle"
                app:layout_constraintWidth_percent=".7" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvBlogDescriptionTwo"
                android:layout_width="@dimen/o"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:text="@string/blog_description2"
                android:textColor="@color/white"
                android:maxLines="3"
                android:ellipsize="end"
                app:layout_constraintEnd_toEndOf="@+id/tvBlogDescriptionOne"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tvBlogDescriptionOne"
                app:layout_constraintTop_toBottomOf="@+id/tvBlogDescriptionOne" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/blogHeart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toEndOf="@+id/tvBlogTitle"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.060000002"
                app:srcCompat="@drawable/ic_heart"
                card_view:ignore="VectorDrawableCompat" />
        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>